tests/fixtures/svs-v3/invalid/malformed-content.hex
24560654071508036e646e080b7376732d76332d7465737436010314001512cd106e6f742d73746174652d766563746f7216031b0100172004ac82d967719a29df1e81f5dc9ae2fefd7aa8129890e726016ef3cede72177b
